# gst-http-controller

./: README.md  configure.ac
src/: Makefile.am  gsthttpcontrol.c  gsthttpcontrol.h
